<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <me.timschneeberger.rootlessjamesdsp.preference.SwitchPreferenceGroup
        android:key="@string/key_spectrumext_enable"
        android:disableDependentsState="false"
        android:title="@string/spectrumext_enable"
        android:icon="@drawable/ic_twotone_auto_awesome_24dp"
        app:iconSpaceReserved="false">
        <Preference
            android:key="section_info"
            android:title="@string/spectrumext_info_title"
            android:summary="@string/spectrumext_info"
            android:persistent="false"
            app:allowDividerAbove="false"
            app:iconSpaceReserved="false"/>
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSeekbarPreference
            android:key="@string/key_spectrumext_bark"
            android:title="@string/spectrumext_bark"
            android:summary="@string/spectrumext_bark_summary"
            android:defaultValue="7600"
            app:minValue="3000"
            app:maxValue="12000"
            app:unit="Hz"
            app:precision="0"
            app:allowDividerAbove="false"
            app:updatesContinuously="true"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSeekbarPreference
            android:key="@string/key_spectrumext_strength"
            android:title="@string/spectrumext_strength"
            android:summary="@string/spectrumext_strength_summary"
            android:defaultValue="45"
            app:minValue="0"
            app:maxValue="60"
            app:unit="%"
            app:precision="0"
            app:allowDividerAbove="false"
            app:updatesContinuously="true"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>
    </me.timschneeberger.rootlessjamesdsp.preference.SwitchPreferenceGroup>
</PreferenceScreen>
