<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <me.timschneeberger.rootlessjamesdsp.preference.SwitchPreferenceGroup
        android:key="@string/key_dyneq_enable"
        android:disableDependentsState="false"
        android:title="@string/dyneq_enable"
        android:icon="@drawable/ic_baseline_equalizer_24dp"
        app:iconSpaceReserved="false">
        <Preference android:key="section_info" android:title="@string/section_info_title"
            android:summary="@string/dyneq_info" android:persistent="false"
            app:allowDividerAbove="false" app:iconSpaceReserved="false"/>
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSeekbarPreference
            android:key="@string/key_dyneq_mix"
            android:title="@string/dyneq_mix"
            android:summary="@string/dyneq_mix_summary"
            android:defaultValue="100"
            app:minValue="0" app:maxValue="100" app:unit="%" app:precision="0"
            app:allowDividerAbove="false" app:updatesContinuously="true"
            app:showSeekBarValue="true" app:iconSpaceReserved="false"/>
    </me.timschneeberger.rootlessjamesdsp.preference.SwitchPreferenceGroup>
</PreferenceScreen>
